fix workspace overlapping

--- a/server/sonar-web/src/main/less/components/workspace.less
+++ b/server/sonar-web/src/main/less/components/workspace.less
@@ -103,6 +103,6 @@
 
 
 // Misc
-.with-workspace {
+.with-workspace .source-viewer {
   padding-bottom: 40vh;
 }
